--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -1,5 +1,14 @@
-<div style="text-align: center">
-  <h1>Welcome to {{ title }}!!</h1>
-  ... Starter Files ...
-  <pm-product-list></pm-product-list>
+<nav class="navbar navbar-expand navbar-light bg-light">
+  <a class="navbar-brand">{{ title }}</a>
+  <ul class="nav nav-pills">
+    <li>
+      <a class="nav-link" [routerLink]="['/welcome']">Home</a>
+    </li>
+    <li>
+      <a class="nav-link" [routerLink]="['/products']">Products</a>
+    </li>
+  </ul>
+</nav>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
